# TesiMag

./: .Rprofile  .gitattributes  .gitignore  .lintr  TesiMag.Rproj  TesiMag.code-workspace  _quarto.yml  algos.R  analysis.xlsx  dem_stars.R  dem_terra.R  environment.yml  index.qmd  interactive.Rmd  interactive.nb.html  load.DPC.R  load.R  merging.qmd  osmdata.Rmd  paths.R  plot_helpers.R  stations_matching.Rmd  test.xlsx  tuts.R  wide.r
Riunioni/: 2024-01-16.txt  2024-03-18.md  2024-03-21.rtf  2024-07-04.md
cpp/: CMakeLists.txt  Makefile  Makefile.old  dataset  dataset.cpp  window.cpp
elaborato/: Frontespizio.docx  biblatex_check.py  frontespizio.tex  main.tex  pdfa.xmpi  references.bib  references.bib.old  schema.md  template.sty
elaborato/chapters/: abstract.tex  conclusioni.tex  creazione_dataset.tex  datasets.tex  intro.tex  stima_normali.tex  valutazione_modello.tex
elaborato/frn/: Frontespizio.md  frn.docx
elaborato/quarto/: references.bib  schema.md  (+1 more)
gdal_cpp/: 01_open.cpp  Makefile  open
notebooks/: brun_dataset.ipynb  brun_dataset_py.ipynb  data_availability.ipynb  emilia_romagna.ipynb  er_dwn.ipynb  full_pairing.qmd  geodata.ipynb  gists.ipynb  liguria.ipynb  lombardia.ipynb  merging.qmd  meta_to_kml.ipynb  net_behaviours.ipynb  networks_behaviours.Rmd  pairing_scia_dpc.ipynb  postmerge_pairing.qmd  read_kml.ipynb  scia_dataset.ipynb  scia_dataset_py.ipynb  scia_split.ipynb  stations_matching.Rmd  test.csv  to_timescale.qmd
presentazione/: beamertheme_statale.sty  main.tex  scaletta.md
scripts/: climats.R  common.R  regional.R
src/: helpers.R
(+473 files in other folders)
